<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="stock_settings">附加设置</string>
    <string name="engineermode_settings">工程模式</string>
    <string name="schedulepoweronoff_settings">定时开关机</string>
    <string name="camera_sound_switch">相机声音开关</string>
    <string name="camera_sound">拍照声音</string>
    <string name="record_sound">录像声音</string>
    <string name="focus_sound">对焦声音</string>
    <string name="mipop">屏幕助手</string>
    <string name="default_camera">默认相机切换</string>
    <string name="Hongmi_camera">当前默认相机为红米相机,你可选择酷派相机作为默认相机</string>
    <string name="CP_camera">当前默认相机为酷派相机,你可选择红米相机作为默认相机</string>
    <string name="author">作者</string>
    <string name="xs">Xs</string>
    <string name="radioinfo">网络类型选择</string>
    <string name="crt">CRT</string>
    <string name="camera_sound_warning">警告：禁用相机声音在部分国家属于非法行为！</string>
    <string name="myappscreenmask">护目镜</string>
    <string name="system">设置</string>
    <string name="flash_recovery">刷入Recovery</string>
    <string name="flash_recovery_warning">请将需要刷入的Recovery放置在内存卡根目录并重命名为recovery.img，然后点击此选项即可刷入并进入刷机模式</string>
    <string name="confirm">警告！</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>
    <string name="switch_vold">默认存储切换</string>
    <string name="External_sdcard">当前默认存储卡为外置SD卡,你可选择内置SD卡作为默认存储卡，选择后会自动重启</string>
    <string name="Internal_sdcard">当前默认存储卡为内置SD卡,你可选择外置SD卡作为默认存储卡，选择后会自动重启</string>
    <string name="led_settings">呼吸灯开关</string>
    <string name="kill_app">程序杀手</string>
    <string name="kill_app_summary">冻结内置程序</string>
    <string name="kill_app_summary_on">已冻结！</string>
    <string name="kill_app_summary_off">已解冻！</string>
    <string name="kill_app_music">音乐</string>
    <string name="kill_app_email">邮件</string>
    <string name="kill_app_gamecenter">游戏中心</string>
    <string name="kill_app_browser">浏览器</string>
    <string name="kill_app_fm">收音机</string>
    <string name="kill_app_warning">警告</string>
    <string name="kill_app_warning_summary">OTA的时候要把所有程序全部解冻才能保证OTA成功</string>
</resources>