<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/stock_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory 
        android:title="@string/system">
        <CheckBoxPreference 
            android:title="@string/crt" 
            android:key="allow_crt_lockscreen" />
        <Preference 
            android:title="@string/myappscreenmask" 
            android:key="myappscreenmask">
            <intent 
                android:targetPackage="cn.mixiaoxiao.myappscreenmask" 
                android:action="android.intent.action.MAIN" 
                android:targetClass="cn.mixiaoxiao.myappscreenmask.MainActivity" />
        </Preference>
        <Preference 
            android:title="@string/mipop" 
            android:key="mipop">
            <intent 
                android:targetPackage="com.android.mipop" 
                android:action="android.intent.action.MAIN" 
                android:targetClass="com.android.mipop.MIPopActivity" />
        </Preference>
        <Preference 
            android:title="@string/engineermode_settings" 
            android:key="engineermode_settings">
            <intent 
                android:targetPackage="com.mediatek.engineermode" 
                android:action="android.intent.action.MAIN" 
                android:targetClass="com.mediatek.engineermode.EngineerMode" />
        </Preference>
        <Preference 
            android:title="@string/schedulepoweronoff_settings" 
            android:key="schedulepoweronoff_settings">
            <intent 
                android:targetPackage="com.mediatek.schpwronoff" 
                android:action="android.intent.action.MAIN" 
                android:targetClass="com.mediatek.schpwronoff.AlarmClock" />
        </Preference>
        <PreferenceScreen 
            android:title="@string/radioinfo" 
            android:key="radioinfo_settings">
            <intent 
                android:targetPackage="com.mediatek.engineermode" 
                android:action="android.intent.action.MAIN" 
                android:targetClass="com.mediatek.engineermode.networkselect.NetworkSelectActivity" />
        </PreferenceScreen>
        <Preference 
            android:title="@string/camera_sound_switch" 
            android:key="camera_sound_switch" 
            android:summary="@string/camera_sound_warning">
            <intent 
                android:targetPackage="com.android.stocksettings" 
                android:action="android.intent.action.MAIN" 
                android:targetClass="com.android.stocksettings.CameraSound" />
        </Preference>
        <Preference 
            android:title="@string/flash_recovery"
            android:summary="@string/flash_recovery_warning"
            android:key="flash_recovery">
        </Preference>
        <ListPreference 
            android:entries="@array/vold_entries"
            android:title="@string/switch_vold"
            android:key="switch_vold" 
            android:defaultValue="0" 
            android:entryValues="@array/vold_values"/>
        <ListPreference 
            android:entries="@array/camera_entries" 
            android:title="@string/default_camera" 
            android:key="camera_change" 
            android:defaultValue="0" 
            android:entryValues="@array/camera_values" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/author">
        <Preference 
            android:title="@string/xs" 
            android:key="xs">
            <intent 
                android:action="android.intent.action.VIEW" 
                android:data="http://weibo.com/acexs" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>