<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="kill_app_music"
        android:summaryOff="@string/kill_app_summary_off"
        android:summaryOn="@string/kill_app_summary_on"
        android:title="@string/kill_app_music" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="kill_app_email"
        android:summaryOff="@string/kill_app_summary_off"
        android:summaryOn="@string/kill_app_summary_on"
        android:title="@string/kill_app_email" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="kill_app_browser"
        android:summaryOff="@string/kill_app_summary_off"
        android:summaryOn="@string/kill_app_summary_on"
        android:title="@string/kill_app_browser" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="kill_app_gamecenter"
        android:summaryOff="@string/kill_app_summary_off"
        android:summaryOn="@string/kill_app_summary_on"
        android:title="@string/kill_app_gamecenter" />

</PreferenceScreen>